<?xml version="1.0"?>
<package>
  <name>teo_remote</name>
  <version>0.0.1</version>
  <description> teo_remote package
    This package contains a first version of the odometry of humanoid robot TEO

    RoboticsLab, University Carlos III of Madrid
  </description>

  <maintainer email="mingo.esteban@gmail.com">Domingo Esteban</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/teo_remote</url>
  <url type="website">http://roboticslab.uc3m.es</url>

  <author email="mingo.esteban@gmail.com">Domingo Esteban</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

 
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
